<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/roleSelectionFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appmergencybta.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appmergencybta.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appmergencybta.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.appmergencybta.ui.login.LoginFragment"
        android:label="Iniciar Sesión"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_inicioFragment"
            app:destination="@id/inicioFragment" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.appmergencybta.ui.register.RegisterFragment"
        android:label="Registro de Usuario"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/roleSelectionFragment"
        android:name="com.example.appmergencybta.ui.roles.RoleSelectionFragment"
        android:label="Seleccionar rol"
        tools:layout="@layout/fragment_role_selection">
        <action
            android:id="@+id/action_roleSelectionFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.example.appmergencybta.ui.inicio.InicioFragment"
        android:label="Inicio"
        tools:layout="@layout/fragment_inicio">
        <action
            android:id="@+id/action_inicioFragment_to_roleSelectionFragment"
            app:destination="@id/roleSelectionFragment" />
        <action
            android:id="@+id/action_inicioFragment_to_modulesFragment"
            app:destination="@id/modulesFragment" />
        <action
            android:id="@+id/action_inicioFragment_to_progressFragment"
            app:destination="@id/progressFragment" />
        <action
            android:id="@+id/action_inicioFragment_to_usersFragment"
            app:destination="@id/usersFragment" />
        <action
            android:id="@+id/action_inicioFragment_to_typificationCodesFragment"
            app:destination="@id/typificationCodesFragment" />
    </fragment>

    <fragment
        android:id="@+id/modulesFragment"
        android:name="com.example.appmergencybta.ui.modules.ModulesFragment"
        android:label="Módulos de Formación"
        tools:layout="@layout/fragment_modules">
        <action
            android:id="@+id/action_modulesFragment_to_moduleDetailFragment"
            app:destination="@id/moduleDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/moduleDetailFragment"
        android:name="com.example.appmergencybta.ui.moduledetail.ModuleDetailFragment"
        android:label="Detalle del Módulo"
        tools:layout="@layout/fragment_module_detail">
        <argument
            android:name="moduleId"
            app:argType="string" />
        <action
            android:id="@+id/action_moduleDetailFragment_to_lessonDetailFragment"
            app:destination="@id/lessonDetailFragment" />
        <action
            android:id="@+id/action_moduleDetailFragment_to_evaluationsFragment"
            app:destination="@id/evaluationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/lessonDetailFragment"
        android:name="com.example.appmergencybta.ui.lessondetail.LessonDetailFragment"
        android:label="Lección"
        tools:layout="@layout/fragment_lesson_detail">
        <argument
            android:name="moduleId"
            app:argType="string" />
        <argument
            android:name="lessonId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/evaluationsFragment"
        android:name="com.example.appmergencybta.ui.evaluations.EvaluationsFragment"
        android:label="Evaluaciones"
        tools:layout="@layout/fragment_evaluations">
        <argument
            android:name="moduleId"
            app:argType="string" />
        <action
            android:id="@+id/action_evaluationsFragment_to_evaluationDetailFragment"
            app:destination="@id/evaluationDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/evaluationDetailFragment"
        android:name="com.example.appmergencybta.ui.evaluationdetail.EvaluationDetailFragment"
        android:label="Evaluación"
        tools:layout="@layout/fragment_evaluation_detail">
        <argument
            android:name="moduleId"
            app:argType="string" />
        <argument
            android:name="evaluationId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/progressFragment"
        android:name="com.example.appmergencybta.ui.progress.ProgressFragment"
        android:label="Mi Progreso"
        tools:layout="@layout/fragment_progress" />
        
    <fragment
        android:id="@+id/usersFragment"
        android:name="com.example.appmergencybta.ui.users.UsersFragment"
        android:label="Gestión de Usuarios"
        tools:layout="@layout/fragment_users" />
        
    <!-- Fragmentos para la funcionalidad de códigos de tipificación -->
    <fragment
        android:id="@+id/typificationCodesFragment"
        android:name="com.example.appmergencybta.ui.typification.TypificationCodesFragment"
        android:label="Códigos de Tipificación"
        tools:layout="@layout/fragment_typification_codes">
        <action
            android:id="@+id/action_typificationCodesFragment_to_codeDetailFragment"
            app:destination="@id/codeDetailFragment" />
        <action
            android:id="@+id/action_typificationCodesFragment_to_codePracticeFragment"
            app:destination="@id/codePracticeFragment" />
        <action
            android:id="@+id/action_typificationCodesFragment_to_flashcardLearningFragment"
            app:destination="@id/flashcardLearningFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/codeDetailFragment"
        android:name="com.example.appmergencybta.ui.typification.CodeDetailFragment"
        android:label="Detalle del Código"
        tools:layout="@layout/fragment_code_detail">
        <action
            android:id="@+id/action_codeDetailFragment_to_codePracticeFragment"
            app:destination="@id/codePracticeFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/codePracticeFragment"
        android:name="com.example.appmergencybta.ui.typification.CodePracticeFragment"
        android:label="Práctica de Códigos"
        tools:layout="@layout/fragment_code_practice">
        <action
            android:id="@+id/action_codePracticeFragment_to_practiceSummaryFragment"
            app:destination="@id/practiceSummaryFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/practiceSummaryFragment"
        android:name="com.example.appmergencybta.ui.typification.PracticeSummaryFragment"
        android:label="Resumen de Práctica"
        tools:layout="@layout/fragment_practice_summary">
        <action
            android:id="@+id/action_practiceSummaryFragment_to_codePracticeFragment"
            app:destination="@id/codePracticeFragment" />
        <action
            android:id="@+id/action_practiceSummaryFragment_to_typificationCodesFragment"
            app:destination="@id/typificationCodesFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/flashcardLearningFragment"
        android:name="com.example.appmergencybta.ui.typification.FlashcardLearningFragment"
        android:label="Memorización de Códigos"
        tools:layout="@layout/fragment_flashcard_learning">
        <action
            android:id="@+id/action_flashcardLearningFragment_to_codePracticeFragment"
            app:destination="@id/codePracticeFragment" />
        <action
            android:id="@+id/action_flashcardLearningFragment_to_typificationCodesFragment"
            app:destination="@id/typificationCodesFragment" />
    </fragment>
</navigation>
